force-app/main/default/objects/Job_Application_Contact__c/Job_Application_Contact__c.object-meta.xml
<CustomObject>
    <description>Junction Object between Job Application and Contact so that there can be a many to many relationship between the two.</description>
    <label>Job Application Contact</label>
    <nameField>
        <displayFormat>JAC-{0000}</displayFormat>
        <label>Job Application Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Application Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>