force-app/main/default/objects/Job_Application_Contact__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>Clickable link to the Contact Name to facilitate navigating from the Job Application directly to a related Contact.</description>
    <formula>HYPERLINK(Contact__c, Contact__r.FirstName + &quot; &quot; +  Contact__r.LastName, &quot;_self&quot;)</formula>
    <inlineHelpText>Contact Name associated with the Job Application.</inlineHelpText>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>