force-app/main/default/objects/Job_Application_Contact__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <description>Primary Master-Detail relationship for the Junction Object.</description>
    <inlineHelpText>Job Application associated with the Job Application Contact</inlineHelpText>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Job_Application_Contacts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>