force-app/main/default/objects/Job_Application_Contact__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Contact associated with the Job Application is the Primary Contact.</description>
    <inlineHelpText>Indicates if the Contact associated with the Job Application is the Primary Contact.</inlineHelpText>
    <label>Primary Contact</label>
    <type>Checkbox</type>
</CustomField>