force-app/main/default/objects/Job_Application_Contact__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Role of the Contact in the Job Application.</description>
    <inlineHelpText>Role of the associated Contact in the associated Job Application.</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hiring Manager</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Team Member</fullName>
            </value>
            <value>
                <fullName>Existing Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>